--- a/index.html
+++ b/index.html
@@ -24,7 +24,16 @@
     <div class="header">
       <div class="head1">
         <ul>
-          <li style="color: black; font-size: 2rem; margin: 1rem">snap</li>
+          <li
+            style="
+              color: black;
+              font-size: 2rem;
+              margin: 1rem;
+              font-weight: bold;
+            "
+          >
+            snap
+          </li>
           <li>
             Features
             <svg width="10" height="6" xmlns="http://www.w3.org/2000/svg">
